# crawl4ai

./: .gitignore  API_COMPATIBILITY.md  CICD_SETUP.md  DEPLOYMENT_GUIDE.md  Dockerfile  Dockerfile.production  K8S_AUTOSCALING.md  PRODUCTION_DEPLOYMENT_CHECKLIST.md  README.md  api_path_compatibility.py  api_server.py  digitalocean-app.yaml  direct_scrapingbee_test.py  docker-compose.yml  pyproject.toml  rebuild_trigger.md  requirements.txt  test_api_compatibility.py  test_deployed_api.py  test_direct_extraction.py  test_hybrid_crawler.py  test_rule_based_extraction.py  test_rule_extraction.py  test_scrapingbee_direct.py  test_server_scrapingbee.py  tunnel-config.yaml  worker.py
.github/workflows/: deploy-api.yml  deploy.yml
crawl4ai/: async_crawler_strategy.py  config.py  direct_scrapingbee.py  rule_based_extraction.py  scrapingbee_client.py  scrapingbee_helper.py  scrapingbee_proxy_direct.py  utils.py
crawl4ai/processors/pdf/: README.md  __init__.py  enhanced_crawler.py  enhanced_processor.py  redis_cache.py
crawl4ai/search/: __init__.py  hybrid_crawler.py  serper_client.py
deploy/docker/: Dockerfile.secure  SECURITY_README.md  TOKEN_MANAGEMENT.md  config.yml  generate_token.py  requirements.txt  scrapingbee_integration.py  scrapingbee_test.py
docs/md_v2/advanced/: enhanced_pdf_processing.md
docs/md_v2/api/: parameters.md  serper_integration.md
k8s/: api-deployment.yaml  redis-deployment.yaml  worker-deployment.yaml  worker-hpa.yaml
tests/: direct_test_claude_3_7.py  simple_scrapingbee_test.py  standalone_scrapingbee_test.py  test_claude_3_7_sonnet.py  test_predeployment.py  test_scrapingbee_integration.py  test_scrapingbee_speed.py  verify_scrapingbee.py
